src/test/ui/const-eval/index_out_of_bound.stderr
error[E0080]: constant evaluation error
  --> $DIR/index_out_of_bound.rs:11:19
   |
11 | static FOO: i32 = [][0];
   |                   ^^^^^ index out of bounds: the len is 0 but the index is 0 at $DIR/index_out_of_bound.rs:11:19: 11:24
   |
note: inside call to FOO
  --> $DIR/index_out_of_bound.rs:11:1
   |
11 | static FOO: i32 = [][0];
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: constant evaluation error
  --> $DIR/index_out_of_bound.rs:11:1
   |
11 | static FOO: i32 = [][0];
   | ^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the len is 0 but the index is 0 at $DIR/index_out_of_bound.rs:11:19: 11:24

error: aborting due to 2 previous errors

